# kernelscript

./: .gitignore  BUILTINS.md  LICENSE  README.md  ROADMAP.md  SPEC.md  dune-project  kernelscript.opam
.github/workflows/: ci.yml  release.yml
builtin/: dune  kprobe.ks  tc.ks  xdp.ks
examples/: basic_match.ks  break_continue_unbound.ks  common_kfuncs.kh  dynptr.ks  error_handling_demo.ks  extern_kfunc_demo.ks  functions.ks  import_demo.ks  include_demo.ks  kprobe_do_exit.ks  local_global_vars.ks  map_operations_demo.ks  maps_demo.ks  multi_programs.ks  named_return.ks  object_allocation.ks  packet_filter.ks  packet_matching.ks  pattern_test.ks  perf_branch_miss.ks  perf_cache_miss.ks  perf_page_fault.ks  pointer_simple.ks  print_demo.ks  private_kfunc.ks  probe.kh  probe_do_exit.ks  python_demo.py  rate_limiter.ks  ringbuf_demo.ks  ringbuf_on_event_demo.ks  safety_demo.ks  sched_ext_ops.kh  sched_ext_simple.ks  simple_gfp_test.ks  simple_list_demo.ks  simple_program_lifecycle.ks  string_test.ks  struct_ops_simple.ks  symbols.ks  (+14 more)
examples/import/: network_utils.py  simple_utils.ks
src/: ast.ml  bpf_helpers.ml  btf_binary_parser.ml  btf_binary_parser.mli  btf_parser.ml  btf_parser.mli  btf_stubs.c  builtin_compiler.ml  builtin_loader.ml  builtin_loader.mli  codegen_common.ml  dune  dynptr_bridge.ml  ebpf_c_codegen.ml  evaluator.ml  import_resolver.ml  include_resolver.ml  ir.ml  ir_analysis.ml  ir_function_system.ml  ir_generator.ml  kernel_module_codegen.ml  kernel_module_codegen.mli  kernel_types.ml  kernelscript_bridge.ml  lexer.mll  loop_analysis.ml  main.ml  map_assignment.ml  map_operations.ml  maps.ml  multi_program_analyzer.ml  multi_program_ir_optimizer.ml  parse.ml  parser.mly  python_bridge.ml  safety_checker.ml  stdlib.ml  struct_ops_registry.ml  struct_ops_registry.mli  (+5 more)
src/context/: context_codegen.ml  context_codegen.mli  dune  fprobe_codegen.ml  kprobe_codegen.ml  perf_event_codegen.ml  tc_codegen.ml  tracepoint_codegen.ml  xdp_codegen.ml
tests/: dune  test_address_of_user_types.ml  test_all_examples.sh  test_array_init.ml  test_array_literals.ml  test_ast.ml  test_bpf_loop_callbacks.ml  test_break_continue.ml  test_btf_binary_parser.ml  test_btf_parser.ml  test_comment_positions.ml  test_compound_index_assignment.ml  test_config.ml  test_config_struct_generation.ml  test_config_validation.ml  test_const_variables.ml  test_context_field_types.ml  test_definition_order.ml  test_detach_api.ml  test_dynptr_bridge.ml  test_ebpf_c_codegen.ml  test_ebpf_string_generation.ml  test_enum.ml  test_error_handling.ml  test_evaluator.ml  test_exec.ml  test_extern.ml  test_for_statements.ml  test_function_generation.ml  test_function_pointers.ml  test_function_scope.ml  test_function_validation.ml  test_global_var.ml  test_global_var_ordering.ml  test_iflet.ml  test_import_system.ml  test_include.ml  test_integer_literal.ml  test_integer_literal_codegen.ml  test_ir.ml  (+57 more)
