(library
 (public_name kernelscript)
 (name kernelscript)
 (modules ast lexer parser parse ir type_checker evaluator symbol_table 
          ir_generator ir_analysis ir_function_system ebpf_c_codegen userspace_codegen 
          loop_analysis multi_program_analyzer multi_program_ir_optimizer
          maps safety_checker map_operations map_assignment)
 (libraries unix str))

(executable
 (public_name kernelscript)
 (name main)
 (modules main)
 (libraries kernelscript unix))



(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action
  (run ocamllex %{deps})))

(rule
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action
  (run menhir %{deps}))) 