(library
 (name kernelscript)
 (modules ast parser lexer parse type_checker symbol_table maps map_assignment 
          map_operations ir ir_generator ir_analysis loop_analysis ir_function_system
          multi_program_analyzer multi_program_ir_optimizer ebpf_c_codegen
          userspace_codegen evaluator safety_checker stdlib builtin_loader
          builtin_compiler tail_call_analyzer kernel_module_codegen dynptr_bridge
          btf_parser btf_binary_parser)
 (libraries unix str kernelscript_context))

(executable
 (public_name kernelscript)
 (name main)
 (modules main)
 (libraries kernelscript unix))

(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action
  (run ocamllex %{deps})))

(rule
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action
  (run menhir %{deps}))) 