(library
 (name kernelscript)
 (modules ast parser lexer parse type_checker symbol_table maps map_assignment 
          map_operations ir ir_generator ir_analysis loop_analysis ir_function_system
          multi_program_analyzer multi_program_ir_optimizer ebpf_c_codegen
          userspace_codegen evaluator safety_checker stdlib test_codegen
tail_call_analyzer kernel_module_codegen dynptr_bridge
          btf_parser btf_binary_parser kernel_types struct_ops_registry
          import_resolver include_resolver python_bridge kernelscript_bridge)
 (libraries unix str kernelscript_context)
 (foreign_stubs
  (language c)
  (names btf_stubs)
  (flags -fPIC -I/usr/include)
  (extra_deps)
  (include_dirs))
 (c_library_flags -lbpf -lelf -lz))

(executable
 (public_name kernelscript)
 (name main)
 (modules main)
 (libraries kernelscript unix))

(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action
  (run ocamllex %{deps})))

(rule
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action
  (run menhir %{deps}))) 