(executable
 (name test_lexer_simple)
 (modules test_lexer_simple)
 (libraries kernelscript alcotest))

(executable
 (name test_ast)
 (modules test_ast)
 (libraries kernelscript alcotest))

(executable
 (name test_parser)
 (modules test_parser)
 (libraries kernelscript alcotest))

(executable
 (name test_type_checker)
 (modules test_type_checker)
 (libraries kernelscript alcotest))

(executable
 (name test_symbol_table)
 (modules test_symbol_table)
 (libraries kernelscript alcotest str))

(executable
 (name test_maps)
 (modules test_maps)
 (libraries kernelscript alcotest))

(executable
 (name test_safety_checker)
 (modules test_safety_checker)
 (libraries kernelscript alcotest))

(executable
 (name test_map_operations)
 (modules test_map_operations)
 (libraries kernelscript alcotest))

(executable
 (name test_evaluator)
 (modules test_evaluator)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ir)
 (name test_ir)
 (modules test_ir)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ir_analysis)
 (name test_ir_analysis)
 (modules test_ir_analysis)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ir_function_system)
 (name test_ir_function_system)
 (modules test_ir_function_system)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ebpf_c_codegen)
 (name test_ebpf_c_codegen)
 (modules test_ebpf_c_codegen)
 (libraries kernelscript alcotest str))

(executable
 (name test_map_syntax)
 (modules test_map_syntax)
 (libraries kernelscript alcotest str))

(executable
 (name test_map_assignment)
 (modules test_map_assignment)
 (libraries kernelscript alcotest))

(executable
 (name test_map_integration)
 (modules test_map_integration)
 (libraries kernelscript alcotest str))

(executable
 (name test_userspace)
 (modules test_userspace)
 (libraries kernelscript alcotest str))

(executable
 (name test_map_flags)
 (modules test_map_flags)
 (libraries kernelscript alcotest))

(executable
 (name test_userspace_maps)
 (modules test_userspace_maps)
 (libraries kernelscript alcotest str))

(executable
 (name test_comment_positions)
 (modules test_comment_positions)
 (libraries kernelscript alcotest))

(executable
 (name test_for_statements)
 (modules test_for_statements)
 (libraries kernelscript alcotest))

(executable
 (name test_config)
 (modules test_config)
 (libraries kernelscript alcotest str))

(executable
 (name test_break_continue)
 (modules test_break_continue)
 (libraries kernelscript alcotest str))

(executable
 (name test_userspace_for_codegen)
 (modules test_userspace_for_codegen)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_userspace_statements)
 (modules test_userspace_statements)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_return_value_propagation)
 (modules test_return_value_propagation)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_stdlib)
 (modules test_stdlib)
 (libraries kernelscript alcotest))

(executable
 (name test_config_struct_generation)
 (modules test_config_struct_generation)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_array_literals)
 (modules test_array_literals)
 (libraries kernelscript alcotest str))

(executable
 (name test_config_validation)
 (modules test_config_validation)
 (libraries kernelscript alcotest str))

(executable
 (name test_userspace_struct_flexibility)
 (modules test_userspace_struct_flexibility)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_struct_field_access)
 (modules test_struct_field_access)
 (libraries kernelscript alcotest))

(executable
 (name test_program_ref)
 (modules test_program_ref)
 (libraries kernelscript alcotest))

; Test aliases for organized execution
(rule
 (alias map-tests)
 (deps
  test_map_syntax.exe
  test_map_assignment.exe
  test_map_integration.exe
  test_map_flags.exe)
 (action
  (progn
   (run ./test_map_syntax.exe)
   (run ./test_map_assignment.exe)
   (run ./test_map_integration.exe)
   (run ./test_map_flags.exe))))

(rule
 (alias userspace-tests)
 (deps
  test_userspace.exe
  test_userspace_maps.exe
  test_userspace_for_codegen.exe
  test_userspace_statements.exe
  test_return_value_propagation.exe
  test_userspace_struct_flexibility.exe)
 (action
  (progn
   (run ./test_userspace.exe)
   (run ./test_userspace_maps.exe)
   (run ./test_userspace_for_codegen.exe)
   (run ./test_userspace_statements.exe)
   (run ./test_return_value_propagation.exe)
   (run ./test_userspace_struct_flexibility.exe))))

(rule
 (alias core-tests)
 (deps
  test_lexer_simple.exe
  test_ast.exe
  test_parser.exe
  test_type_checker.exe
  test_symbol_table.exe
  test_comment_positions.exe
  test_for_statements.exe
  test_break_continue.exe
  test_config.exe
  test_config_struct_generation.exe
  test_array_literals.exe
  test_config_validation.exe
  test_stdlib.exe
  test_struct_field_access.exe)
 (action
  (progn
   (run ./test_lexer_simple.exe)
   (run ./test_ast.exe)
   (run ./test_parser.exe)
   (run ./test_type_checker.exe)
   (run ./test_symbol_table.exe)
   (run ./test_comment_positions.exe)
   (run ./test_for_statements.exe)
   (run ./test_break_continue.exe)
   (run ./test_config.exe)
   (run ./test_config_struct_generation.exe)
   (run ./test_array_literals.exe)
   (run ./test_config_validation.exe)
   (run ./test_stdlib.exe)
   (run ./test_struct_field_access.exe))))

(rule
 (alias ir-tests)
 (deps
  test_ir.exe
  test_ir_analysis.exe
  test_ir_function_system.exe)
 (action
  (progn
   (run ./test_ir.exe)
   (run ./test_ir_analysis.exe)
   (run ./test_ir_function_system.exe))))

(rule
 (alias codegen-tests)
 (deps test_ebpf_c_codegen.exe)
 (action (run ./test_ebpf_c_codegen.exe)))

; Top-level alias to run all tests
(alias
 (name tests)
 (deps
  (alias core-tests)
  (alias map-tests)
  (alias ir-tests)
  (alias codegen-tests)
  (alias userspace-tests))) 