(library
 (name test_utils)
 (modules test_utils)
 (libraries kernelscript))

(executable
 (name test_btf_binary_parser)
 (modules test_btf_binary_parser)
 (libraries kernelscript alcotest))

(executable
 (name test_lexer)
 (modules test_lexer)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_ir_patterns)
 (modules test_ir_patterns)
 (libraries kernelscript alcotest))

(executable
 (name test_ast)
 (modules test_ast)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_parser)
 (modules test_parser)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_type_checker)
 (modules test_type_checker)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_symbol_table)
 (modules test_symbol_table)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_maps)
 (modules test_maps)
 (libraries kernelscript alcotest))

(executable
 (name test_safety_checker)
 (modules test_safety_checker)
 (libraries kernelscript alcotest))

(executable
 (name test_map_operations)
 (modules test_map_operations)
 (libraries kernelscript alcotest))

(executable
 (name test_evaluator)
 (modules test_evaluator)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_compound_index_assignment)
 (modules test_compound_index_assignment)
 (libraries kernelscript alcotest test_utils str))

(executable
 (name test_dynptr_bridge)
 (modules test_dynptr_bridge)
 (libraries kernelscript alcotest))

(executable
 (name test_global_var_ordering)
 (modules test_global_var_ordering)
 (libraries kernelscript alcotest))

(executable
 (name test_string_to_array_unification)
 (modules test_string_to_array_unification)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_truthy_falsy)
 (modules test_truthy_falsy)
 (libraries kernelscript alcotest test_utils))



(executable
 (public_name test_ir)
 (name test_ir)
 (modules test_ir)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ir_analysis)
 (name test_ir_analysis)
 (modules test_ir_analysis)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ir_function_system)
 (name test_ir_function_system)
 (modules test_ir_function_system)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ebpf_c_codegen)
 (name test_ebpf_c_codegen)
 (modules test_ebpf_c_codegen)
 (libraries kernelscript alcotest str))

(executable
 (name test_map_syntax)
 (modules test_map_syntax)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_map_assignment)
 (modules test_map_assignment)
 (libraries kernelscript alcotest))

(executable
 (name test_map_integration)
 (modules test_map_integration)
 (libraries kernelscript alcotest str))

(executable
 (name test_userspace)
 (modules test_userspace)
 (libraries kernelscript alcotest str))

(executable
 (name test_map_flags)
 (modules test_map_flags)
 (libraries kernelscript alcotest))

(executable
 (name test_userspace_maps)
 (modules test_userspace_maps)
 (libraries kernelscript alcotest str unix test_utils))

(executable
 (name test_comment_positions)
 (modules test_comment_positions)
 (libraries kernelscript alcotest))

(executable
 (name test_for_statements)
 (modules test_for_statements)
 (libraries kernelscript alcotest))

(executable
 (name test_config)
 (modules test_config)
 (libraries kernelscript alcotest str))

(executable
 (name test_break_continue)
 (modules test_break_continue)
 (libraries kernelscript alcotest str))

(executable
 (name test_bpf_loop_callbacks)
 (modules test_bpf_loop_callbacks)
 (libraries kernelscript alcotest str))

(executable
 (name test_userspace_for_codegen)
 (modules test_userspace_for_codegen)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_userspace_statements)
 (modules test_userspace_statements)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_return_value_propagation)
 (modules test_return_value_propagation)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_stdlib)
 (modules test_stdlib)
 (libraries kernelscript alcotest))

(executable
 (name test_config_struct_generation)
 (modules test_config_struct_generation)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_array_literals)
 (modules test_array_literals)
 (libraries kernelscript alcotest str))

(executable
 (name test_array_init)
 (modules test_array_init)
 (libraries kernelscript alcotest))

(executable
 (name test_config_validation)
 (modules test_config_validation)
 (libraries kernelscript alcotest str))

(executable
 (name test_userspace_struct_flexibility)
 (modules test_userspace_struct_flexibility)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_struct_field_access)
 (modules test_struct_field_access)
 (libraries kernelscript alcotest test_utils str))

(executable
 (name test_struct_initialization)
 (modules test_struct_initialization)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_program_ref)
 (modules test_program_ref)
 (libraries kernelscript alcotest))

(executable
 (name test_function_pointers)
 (modules test_function_pointers)
 (libraries kernelscript alcotest))

(executable
 (name test_string_type)
 (modules test_string_type)
 (libraries kernelscript alcotest))

(executable
 (name test_string_codegen)
 (modules test_string_codegen)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_userspace_skeleton_header)
 (modules test_userspace_skeleton_header)
 (libraries kernelscript alcotest str))

(executable
 (name test_match)
 (modules test_match)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_pinned_globals)
 (modules test_pinned_globals)
 (libraries kernelscript alcotest str))



(executable
 (name test_string_struct_fixes)
 (modules test_string_struct_fixes)
 (libraries kernelscript alcotest str unix))

(executable
 (public_name test_error_handling)  
 (name test_error_handling)
 (modules test_error_handling)
 (libraries kernelscript alcotest))

(executable
 (name test_struct_ops)
 (modules test_struct_ops)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_pointer_syntax)
 (modules test_pointer_syntax)
 (libraries kernelscript alcotest str))

(executable
 (name test_address_of_user_types)
 (modules test_address_of_user_types)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_kfunc_attribute)
 (modules test_kfunc_attribute)
 (libraries kernelscript alcotest str))

(executable
 (name test_private_attribute)
 (modules test_private_attribute)
 (libraries kernelscript alcotest str))


(executable
 (name test_function_scope)
 (modules test_function_scope)
 (libraries kernelscript alcotest))

(executable
 (public_name test_integer_literal_codegen)
 (name test_integer_literal_codegen)
 (libraries kernelscript alcotest str)
 (modules test_integer_literal_codegen))

(executable
 (name test_string_literal_bugs)
 (modules test_string_literal_bugs)
 (libraries kernelscript alcotest str))

(executable
 (name test_return_path_analysis)
 (modules test_return_path_analysis)
 (libraries kernelscript alcotest))

(executable
 (name test_enum)
 (modules test_enum)
 (libraries kernelscript alcotest))

(executable
 (name test_nested_if_codegen)
 (modules test_nested_if_codegen)
 (libraries kernelscript alcotest str))

(executable
 (name test_type_alias)
 (modules test_type_alias)
 (libraries kernelscript alcotest str))

(executable
 (name test_const_variables)
 (modules test_const_variables)
 (libraries kernelscript alcotest))

(executable
 (name test_global_var)
 (modules test_global_var)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_function_validation)
 (modules test_function_validation)
 (libraries kernelscript alcotest))

(executable
 (name test_tail_call)
 (modules test_tail_call)
 (libraries kernelscript alcotest))

(executable
 (name test_context_field_types)
 (modules test_context_field_types)
 (libraries kernelscript alcotest str))

; Test rules for individual execution
(rule
 (alias runtest_lexer)
 (action (run ./test_lexer.exe)))

(rule
 (alias runtest_ast)
 (action (run ./test_ast.exe)))

(rule
 (alias runtest_parser)
 (action (run ./test_parser.exe)))

(rule
 (alias runtest_type_checker)
 (action (run ./test_type_checker.exe)))

(rule
 (alias runtest_symbol_table)
 (action (run ./test_symbol_table.exe)))

(rule
 (alias runtest_maps)
 (action (run ./test_maps.exe)))

(rule
 (alias runtest_safety_checker)
 (action (run ./test_safety_checker.exe)))

(rule
 (alias runtest_map_operations)
 (action (run ./test_map_operations.exe)))

(rule
 (alias runtest_evaluator)
 (action (run ./test_evaluator.exe)))

(rule
 (alias runtest_dynptr_bridge)
 (action (run ./test_dynptr_bridge.exe)))

(rule
 (alias runtest_ir)
 (action (run ./test_ir.exe)))

(rule
 (alias runtest_ir_analysis)
 (action (run ./test_ir_analysis.exe)))

(rule
 (alias runtest_ir_function_system)
 (action (run ./test_ir_function_system.exe)))

(rule
 (alias runtest_ebpf_c_codegen)
 (action (run ./test_ebpf_c_codegen.exe)))

(rule
 (alias runtest_map_syntax)
 (action (run ./test_map_syntax.exe)))

(rule
 (alias runtest_map_assignment)
 (action (run ./test_map_assignment.exe)))

(rule
 (alias runtest_map_integration)
 (action (run ./test_map_integration.exe)))

(rule
 (alias runtest_userspace)
 (action (run ./test_userspace.exe)))

(rule
 (alias runtest_map_flags)
 (action (run ./test_map_flags.exe)))

(rule
 (alias runtest_userspace_maps)
 (action (run ./test_userspace_maps.exe)))

(rule
 (alias runtest_comment_positions)
 (action (run ./test_comment_positions.exe)))

(rule
 (alias runtest_for_statements)
 (action (run ./test_for_statements.exe)))

(rule
 (alias runtest_config)
 (action (run ./test_config.exe)))

(rule
 (alias runtest_break_continue)
 (action (run ./test_break_continue.exe)))

(rule
 (alias runtest_userspace_for_codegen)
 (action (run ./test_userspace_for_codegen.exe)))

(rule
 (alias runtest_userspace_statements)
 (action (run ./test_userspace_statements.exe)))

(rule
 (alias runtest_return_value_propagation)
 (action (run ./test_return_value_propagation.exe)))

(rule
 (alias runtest_stdlib)
 (action (run ./test_stdlib.exe)))

(rule
 (alias runtest_config_struct_generation)
 (action (run ./test_config_struct_generation.exe)))

(rule
 (alias runtest_array_literals)
 (action (run ./test_array_literals.exe)))

(rule
 (alias runtest_config_validation)
 (action (run ./test_config_validation.exe)))

(rule
 (alias runtest_userspace_struct_flexibility)
 (action (run ./test_userspace_struct_flexibility.exe)))

(rule
 (alias runtest_struct_field_access)
 (action (run ./test_struct_field_access.exe)))

(rule
 (alias runtest_struct_initialization)
 (action (run ./test_struct_initialization.exe)))

(rule
 (alias runtest_program_ref)
 (action (run ./test_program_ref.exe)))

(rule
 (alias runtest_string_type)
 (action (run ./test_string_type.exe)))

(rule
 (alias runtest_string_codegen)
 (action (run ./test_string_codegen.exe)))

(rule
 (alias runtest_string_struct_fixes)
 (action (run ./test_string_struct_fixes.exe)))

(rule
 (alias runtest_string_literal_bugs)
 (action (run ./test_string_literal_bugs.exe)))

(rule
 (alias runtest_userspace_skeleton_header)
 (action (run ./test_userspace_skeleton_header.exe)))

(rule
 (alias runtest_return_path_analysis)
 (action (run ./test_return_path_analysis.exe)))

(rule
 (alias runtest_enum)
 (action (run ./test_enum.exe)))

(rule
 (alias runtest_nested_if_codegen)
 (action (run ./test_nested_if_codegen.exe)))

(rule
 (alias runtest_type_alias)
 (action (run ./test_type_alias.exe)))

(rule
 (alias runtest_function_pointers)
 (action (run ./test_function_pointers.exe)))

(rule
 (alias runtest_const_variables)
 (action (run ./test_const_variables.exe)))

(rule
 (alias runtest_global_var)
 (action (run ./test_global_var.exe)))

(rule
 (alias runtest_integer_literal_codegen)
 (action (run ./test_integer_literal_codegen.exe)))

(rule
 (alias runtest_tail_call)
 (action (run ./test_tail_call.exe)))

(rule
 (alias runtest_pointer_syntax)
 (action (run ./test_pointer_syntax.exe)))

(rule
 (alias runtest_address_of_user_types)
 (action (run ./test_address_of_user_types.exe)))

(rule
 (alias runtest_match)
 (action (run ./test_match.exe)))

(rule
 (alias runtest_context_field_types)
 (action (run ./test_context_field_types.exe)))

; Test aliases for organized execution
(rule
 (alias map-tests)
 (deps
  test_map_syntax.exe
  test_map_assignment.exe
  test_map_integration.exe
  test_map_flags.exe
  test_maps.exe
  test_map_operations.exe)
 (action
  (progn
   (run ./test_map_syntax.exe)
   (run ./test_map_assignment.exe)
   (run ./test_map_integration.exe)
   (run ./test_map_flags.exe)
   (run ./test_maps.exe)
   (run ./test_map_operations.exe))))

(rule
 (alias userspace-tests)
 (deps
  test_userspace.exe
  test_userspace_maps.exe
  test_userspace_for_codegen.exe
  test_userspace_statements.exe
  test_return_value_propagation.exe
  test_userspace_struct_flexibility.exe
  test_userspace_skeleton_header.exe
  test_string_codegen.exe
  test_string_struct_fixes.exe
  test_string_type.exe
  test_string_literal_bugs.exe)
 (action
  (progn
   (run ./test_userspace.exe)
   (run ./test_userspace_maps.exe)
   (run ./test_userspace_for_codegen.exe)
   (run ./test_userspace_statements.exe)
   (run ./test_return_value_propagation.exe)
   (run ./test_userspace_struct_flexibility.exe)
   (run ./test_userspace_skeleton_header.exe)
   (run ./test_string_codegen.exe)
   (run ./test_string_struct_fixes.exe)
   (run ./test_string_type.exe)
   (run ./test_string_literal_bugs.exe))))

(rule
 (alias core-tests)
 (deps
  test_btf_binary_parser.exe
  test_lexer.exe
  test_ast.exe
  test_parser.exe
  test_type_checker.exe
  test_symbol_table.exe
  test_comment_positions.exe
  test_for_statements.exe
  test_break_continue.exe
  test_config.exe
  test_config_struct_generation.exe
  test_array_literals.exe
  test_array_init.exe
  test_config_validation.exe
  test_stdlib.exe
  test_struct_field_access.exe
  test_struct_initialization.exe
  test_error_handling.exe
  test_function_scope.exe
  test_function_validation.exe
  test_kfunc_attribute.exe
  test_private_attribute.exe
  test_enum.exe
  test_type_alias.exe
  test_const_variables.exe
  test_global_var.exe
  test_evaluator.exe
  test_function_pointers.exe
  test_compound_index_assignment.exe
  test_dynptr_bridge.exe
  test_safety_checker.exe
  test_program_ref.exe
  test_return_path_analysis.exe
  test_tail_call.exe
  test_struct_ops.exe
  test_pointer_syntax.exe
  test_address_of_user_types.exe
  test_match.exe)
 (action
  (progn
   (run ./test_btf_binary_parser.exe)
   (run ./test_lexer.exe)
   (run ./test_ast.exe)
   (run ./test_parser.exe)
   (run ./test_type_checker.exe)
   (run ./test_symbol_table.exe)
   (run ./test_comment_positions.exe)
   (run ./test_for_statements.exe)
   (run ./test_break_continue.exe)
   (run ./test_config.exe)
   (run ./test_config_struct_generation.exe)
   (run ./test_array_literals.exe)
   (run ./test_array_init.exe)
   (run ./test_config_validation.exe)
   (run ./test_stdlib.exe)
   (run ./test_struct_field_access.exe)
   (run ./test_struct_initialization.exe)
   (run ./test_error_handling.exe)
   (run ./test_function_scope.exe)
   (run ./test_function_validation.exe)
   (run ./test_kfunc_attribute.exe)
   (run ./test_private_attribute.exe)
   (run ./test_enum.exe)
   (run ./test_type_alias.exe)
   (run ./test_const_variables.exe)
   (run ./test_global_var.exe)
   (run ./test_evaluator.exe)
   (run ./test_function_pointers.exe)
   (run ./test_compound_index_assignment.exe)
   (run ./test_dynptr_bridge.exe)
   (run ./test_safety_checker.exe)
   (run ./test_program_ref.exe)
   (run ./test_return_path_analysis.exe)
   (run ./test_tail_call.exe)
   (run ./test_struct_ops.exe)
   (run ./test_pointer_syntax.exe)
   (run ./test_address_of_user_types.exe)
   (run ./test_match.exe))))

(rule
 (alias ir-tests)
 (deps
  test_ir.exe
  test_ir_analysis.exe
  test_ir_function_system.exe)
 (action
  (progn
   (run ./test_ir.exe)
   (run ./test_ir_analysis.exe)
   (run ./test_ir_function_system.exe))))

(rule
 (alias codegen-tests)
 (deps test_ebpf_c_codegen.exe test_nested_if_codegen.exe test_integer_literal_codegen.exe test_context_field_types.exe test_global_var_ordering.exe test_bpf_loop_callbacks.exe)
 (action
  (progn
   (run ./test_ebpf_c_codegen.exe)
   (run ./test_nested_if_codegen.exe)
   (run ./test_integer_literal_codegen.exe)
   (run ./test_context_field_types.exe)
   (run ./test_global_var_ordering.exe)
   (run ./test_bpf_loop_callbacks.exe))))

; Top-level alias to run all tests
(alias
 (name tests)
 (deps
  (alias core-tests)
  (alias map-tests)
  (alias ir-tests)
  (alias codegen-tests)
  (alias userspace-tests)))

(rule
 (alias runtest)
 (deps
  ./test_ast.exe
  ./test_lexer.exe
  ./test_parser.exe
  ./test_ir.exe
  ./test_ir_analysis.exe
  ./test_ebpf_c_codegen.exe
  ./test_maps.exe
  ./test_map_operations.exe
  ./test_return_path_analysis.exe
  ./test_safety_checker.exe
  ./test_string_literal_bugs.exe
  ./test_nested_if_codegen.exe
  ./test_error_handling.exe
  ./test_integer_literal_codegen.exe)
 (action
  (progn
   (run ./test_ast.exe)
   (run ./test_lexer.exe)
   (run ./test_parser.exe)
   (run ./test_ir.exe)
   (run ./test_ir_analysis.exe)
   (run ./test_ebpf_c_codegen.exe)
   (run ./test_maps.exe)
   (run ./test_map_operations.exe)
   (run ./test_return_path_analysis.exe)
   (run ./test_safety_checker.exe)
   (run ./test_string_literal_bugs.exe)
   (run ./test_nested_if_codegen.exe)
   (run ./test_error_handling.exe)
   (run ./test_integer_literal_codegen.exe)))) 